# Introduction_to_Algotithms

./: CMakeLists.txt
Chapter2/: 1_insertion_sort.c  2_merge_sort.c
Practices/: pr2_1_2.c  pr2_1_3.c  pr2_1_4.c
